패키지제이슨 수정정

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "deploy": "strapi deploy",
     "dev": "strapi develop",
     "develop": "npx strapi develop",
-    "start": "npx strapi start",
+    "start": "strapi start",
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
