--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,26 +5,30 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.client
-    container_name: client
     ports:
       - '5174:5174'
     volumes:
       - ./client:/app/client
+    environment:
+      - VITE_API_URL=https://yhjwork-production.up.railway.app
     networks:
-      - app-network
+      - frontend
 
   server:
     build:
       context: .
       dockerfile: Dockerfile.server
-    container_name: server
     ports:
       - '1337:1337'
-    volumes:
-      - ./server:/app/server
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+      - JWT_SECRET=${JWT_SECRET}
+      - APP_KEYS=${APP_KEYS}
+      - API_TOKEN_SALT=${API_TOKEN_SALT}
+      - HOST=0.0.0.0
     networks:
-      - app-network
+      - frontend
 
 networks:
-  app-network:
+  frontend:
     driver: bridge
