--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   client:
     build:
       context: .
-      dockerfile: Dockerfile.client
+      dockerfile: ./client/Dockerfile.client
     ports:
       - '5174:5174'
     volumes:
@@ -17,15 +17,11 @@ services:
   server:
     build:
       context: .
-      dockerfile: Dockerfile.server
+      dockerfile: ./server/Dockerfile.server
     ports:
       - '1337:1337'
-    environment:
-      - DATABASE_URL=${DATABASE_URL}
-      - JWT_SECRET=${JWT_SECRET}
-      - APP_KEYS=${APP_KEYS}
-      - API_TOKEN_SALT=${API_TOKEN_SALT}
-      - HOST=0.0.0.0
+    env_file:
+      - ./server/.env # 서버의 .env 파일을 포함시킵니다
     networks:
       - frontend
 
