도커 수정정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 
 services:
+  # 클라이언트 서비스
   client:
     build:
       context: .
@@ -14,14 +15,19 @@ services:
     networks:
       - frontend
 
+  # 서버 서비스
   server:
     build:
       context: .
       dockerfile: ./server/Dockerfile.server
     ports:
       - '1337:1337'
-    env_file:
-      - ./server/.env # 서버의 .env 파일을 포함시킵니다
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+      - JWT_SECRET=${JWT_SECRET}
+      - APP_KEYS=${APP_KEYS}
+      - API_TOKEN_SALT=${API_TOKEN_SALT}
+      - HOST=0.0.0.0
     networks:
       - frontend
 
