--- a/client/Dockerfile.client
+++ b/client/Dockerfile.client
@@ -1,15 +1,21 @@
+# 클라이언트 Dockerfile 예시
 FROM node:20 AS build
 
+# 작업 디렉토리 설정
 WORKDIR /app
 
-# Copy client package.json and package-lock.json
+# 클라이언트 코드 복사
 COPY ./client/package.json ./client/package-lock.json ./client/
 WORKDIR /app/client
+
+# 의존성 설치
 RUN npm install
 
-# Build the React client
+# 빌드 실행
 RUN npm run build
 
+# 포트 노출
 EXPOSE 5174
 
+# 개발 서버 실행 (필요에 따라 수정)
 CMD ["npm", "run", "dev"]
