--- a/server/Dockerfile.server
+++ b/server/Dockerfile.server
@@ -1,19 +1,21 @@
-# Use Node.js official image as base
+# 1. 기본 Node.js 이미지 사용
 FROM node:20 AS build
 
+# 2. 작업 디렉토리 설정
 WORKDIR /app
 
-# Copy server's package.json and package-lock.json
+# 3. 서버 코드 복사 및 의존성 설치
 COPY ./server/package.json ./server/package-lock.json ./server/
 WORKDIR /app/server
+
+# 의존성 설치
 RUN npm install
 
-# Copy environment variables
-COPY ./server/.env ./
+# 4. 빌드 (필요한 경우만 실행)
+# RUN npm run build  # 빌드 스크립트가 필요한 경우 주석을 제거하고 사용
 
-# Copy the rest of the server code
-COPY ./server /app/server
-
+# 5. 서버 포트 노출 (Strapi 기본 포트 1337)
 EXPOSE 1337
 
-CMD ["npm", "run", "develop"]
+# 6. 서버 실행
+CMD ["npm", "run", "develop"] 
