--- a/server - 복사본/package.json
+++ b/server - 복사본/package.json
@@ -4,21 +4,22 @@
   "private": true,
   "description": "A Strapi application",
   "scripts": {
-    "build": "strapi build",
+    "build": "npx strapi build",
     "console": "strapi console",
     "deploy": "strapi deploy",
     "dev": "strapi develop",
-    "develop": "strapi develop",
+    "develop": "npx strapi develop",
     "start": "strapi start",
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
-    "@strapi/plugin-cloud": "5.12.4",
-    "@strapi/plugin-users-permissions": "5.12.4",
-    "@strapi/strapi": "5.12.4",
+    "@strapi/plugin-cloud": "5.12.3",
+    "@strapi/plugin-users-permissions": "5.12.3",
+    "@strapi/strapi": "5.12.3",
     "better-sqlite3": "11.3.0",
+    "pg": "^8.14.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
@@ -35,6 +36,6 @@
     "npm": ">=6.0.0"
   },
   "strapi": {
-    "uuid": "b294b50a-49ff-4542-b51f-7e896e4b78c1"
+    "uuid": "5a0fd83f-6ba0-4ad9-b83c-2275c5784a86"
   }
 }
