--- a/server/src/plugins/import-export-content/package.json
+++ b/server/src/plugins/import-export-content/package.json
@@ -1,7 +1,7 @@
 {
   "name": "strapi-plugin-import-export-content",
   "version": "0.4.2",
-  "description": "This is a plugin for import and export content of collection types.",
+  "description": "This is a plugin for import and export content of collection types",
   "license": "MIT",
   "strapi": {
     "name": "import-export-content",
