--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "jquery": "^3.7.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "scroll-out": "^2.2.12",
+    "splitting": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
