--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fullpage/react-fullpage": "^0.1.48",
     "axios": "^1.8.4",
     "jquery": "^3.7.1",
+    "locomotive-scroll": "^4.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
