--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
+    "sass": "^1.86.3",
     "scroll-out": "^2.2.12",
     "splitting": "^1.1.0"
   },
