--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^7.5.0",
     "sass": "^1.86.3",
     "scroll-out": "^2.2.12",
+    "split-type": "^0.3.4",
     "splitting": "^1.1.0"
   },
   "devDependencies": {
