--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^7.5.0",
     "sass": "^1.86.3",
     "scroll-out": "^2.2.12",
