--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,10 @@
     "react-icons": "^5.5.0",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^7.5.0",
+    "react-slick": "^0.30.3",
     "sass": "^1.86.3",
     "scroll-out": "^2.2.12",
+    "slick-carousel": "^1.8.1",
     "split-type": "^0.3.4",
     "splitting": "^1.1.0"
   },
